# OTUS-HW-3

./: CMakeLists.txt  conanfile.txt
.github/workflows/: cmake-main-build.yml  cmake-single-platform.yml
include/: filter.hpp  ip.hpp
src/: filter.cpp  ip.cpp  main.cpp
test/scripts/: out_equality_test.sh
test/src/: test.cpp
